--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@
     KDECI_CRAFT_PROJECT_CONFIG: $CI_PROJECT_DIR/src/.craft.ini
   interruptible: true
   before_script:
-    - git clone if ($env:CI_MERGE_REQUEST_SOURCE_PROJECT_URL) { $env:CI_MERGE_REQUEST_SOURCE_PROJECT_URL } else { $env:CI_REPOSITORY_URL } --branch=$env:CI_COMMIT_REF_NAME src/
+    - if (Test-Path env:CI_MERGE_REQUEST_SOURCE_PROJECT_URL) { git clone $env:CI_MERGE_REQUEST_SOURCE_PROJECT_URL --branch=$env:CI_COMMIT_REF_NAME src/ } else { git clone $env:CI_REPOSITORY_URL --branch=$env:CI_COMMIT_REF_NAME src/ }
     # Create empty .craft.ini if none exists
     - if (!(Test-Path $env:KDECI_CRAFT_PROJECT_CONFIG)) { New-Item $env:KDECI_CRAFT_PROJECT_CONFIG -ItemType file }
     - cd C:\Gitlab\Craft\
