--- a/addons/katebuild-plugin/ui.rc
+++ b/addons/katebuild-plugin/ui.rc
@@ -14,6 +14,8 @@
       <Separator/>
       <Action name="focus_build_tab_left"/>
       <Action name="focus_build_tab_right"/>
+      <Separator/>
+      <Action name="load_targets_cmakefileapi"/>
     </Menu>
   </MenuBar>
 </gui>
